# ChangeLog for sys-devel/prelink
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/prelink/ChangeLog,v 1.93 2014/07/22 18:52:33 pacho Exp $

  22 Jul 2014; Pacho Ramos <pacho@gentoo.org> prelink-20130503.ebuild:
  amd64/x86 stable, bug #508326

*prelink-20130503 (11 May 2013)

  11 May 2013; Mike Frysinger <vapier@gentoo.org>
  +files/prelink-20130503-libiberty-md5.patch,
  +files/prelink-20130503-prelink-conf.patch,
  +files/prelink-armhf-dynamic-linker.patch, +prelink-20130503.ebuild:
  Version bump.

  11 May 2013; Mike Frysinger <vapier@gentoo.org> prelink-20120628.ebuild:
  Fix building w/automake-1.13 #469126 by ablepharus.

  11 May 2013; Mike Frysinger <vapier@gentoo.org> prelink-20120628.ebuild:
  Add USE=selinux to control selinux linkage.

*prelink-20120628 (18 Aug 2012)

  18 Aug 2012; Ryan Hill <dirtyepic@gentoo.org> -prelink-20100106.ebuild,
  +prelink-20120628.ebuild:
  Version bump.

  22 Jul 2012; Mike Frysinger <vapier@gentoo.org> prelink-20111012.ebuild:
  Link against pthreads when elfutils is built with USE=threads #427538 by
  argonovsky.

  20 Jul 2012; Mike Frysinger <vapier@gentoo.org> prelink-20110511.ebuild,
  prelink-20111012.ebuild:
  Require elfutils[static-libs] #427222 by toogle.

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> prelink-20100106.ebuild,
  prelink-20110511.ebuild, prelink-20111012.ebuild:
  Drop s390/sparc keywords

  13 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> prelink-20110511.ebuild:
  ppc64 stable wrt #391757

  01 Feb 2012; Brent Baude <ranger@gentoo.org> prelink-20110511.ebuild:
  Marking prelink-20110511 ppc for bug 391757

  26 Dec 2011; Markus Meier <maekke@gentoo.org> prelink-20110511.ebuild:
  x86 stable, bug #391757

  28 Nov 2011; Tony Vroon <chainsaw@gentoo.org> prelink-20110511.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Tomáš "Mepho" Pružina in bug #391757.

*prelink-20111012 (24 Nov 2011)
