@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/prelink/prelink-20130503.ebuild,v 1.2 2014/07/22 18:52:33 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/prelink/prelink-20130503.ebuild,v 1.3 2015/03/02 09:33:31 ago Exp $
 
 EAPI="4"
 
@@ -19,7 +19,7 @@ SRC_URI="mirror://gentoo/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 -arm ~ppc ~ppc64 x86"
+KEYWORDS="amd64 -arm ppc ~ppc64 x86"
 IUSE="selinux"
 
 DEPEND=">=dev-libs/elfutils-0.100[static-libs(+)]
