@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/prelink
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/prelink/ChangeLog,v 1.93 2014/07/22 18:52:33 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/prelink/ChangeLog,v 1.94 2015/03/02 09:33:31 ago Exp $
+
+  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> prelink-20130503.ebuild:
+  Stable for ppc, wrt bug #508326
 
   22 Jul 2014; Pacho Ramos <pacho@gentoo.org> prelink-20130503.ebuild:
   amd64/x86 stable, bug #508326
